Working all the source code with many errors and failures in its execution (PART-2)