@@ -1,9 +1,10 @@
 @echo off
-COLOR 0A
+COLOR 0B
 title Game Server Registration...
 :start
 echo Starting Game Server Registration.
 echo.
-java -server -Xms64m -Xmx64m -cp config;./../libs/* l2f.loginserver.GameServerRegister
+
+java -Dfile.encoding=UTF-8 -XX:+UseConcMarkSweepGC -Xmx256M -cp config;./../libs/* l2f.loginserver.GameServerRegister
 
 pause
